# lce

./: .gitignore  CMakeLists.txt  README.md
doc/: doc.md  dumped.md  log.txt
include/: angle.h  config.h  core.h  poly.h  pool.h
src/: angle.c  collision.c  core.c  main.c  observe.c  poly.c  pool.c  render.c
